.circleci/files/aws_eks.yml
Description: EKS Cluster.

Parameters:
  WorkflowID:
    Description: Unique identifier.
    Type: String
    Default: udapeople-capstone-project

Resources:


  EKSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${WorkflowID}
      GroupDescription: Allow port 3030 and port 3030.
      Tags:
        - Key: Environment
          Value: !Ref WorkflowID
        - Key: Name
          Value: !Sub ${WorkflowID}-EKSSecurityGroup
      VpcId:
        Fn::ImportValue: capstone-project-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3030
          ToPort: 3030
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 27017
          ToPort: 27017
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3030
          ToPort: 3030
          CidrIp: 0.0.0.0/0

  
  EKSCluster:
      Type: AWS::EKS::Cluster
      Properties:
        Name: Prod
        Version: "1.20"
        RoleArn: 
          Fn::ImportValue: udapeople-capstone-project-ClusterRoleArn
        ResourcesVpcConfig:
          SecurityGroupIds:
            - !Ref EKSSecurityGroup
          SubnetIds:
            - Fn::ImportValue: udapeople-capstone-project-public-subnet1
            # - Fn::ImportValue: udapeople-capstone-project-public-subnet2
        Tags:
          - Key: "key"
            Value: "val"

  EKSNodeGroup:
    Type: AWS::EKS::Nodegroup
    Properties:
      ClusterName: !Ref EKSCluster
      NodeRole:
        Fn::ImportValue: udapeople-capstone-project-NodeGroupArn
      ScalingConfig:
        MinSize: 1
        DesiredSize: 1
        MaxSize: 3
      Subnets:
        - Fn::ImportValue: udapeople-capstone-project-public-subnet1
        # - Fn::ImportValue: udapeople-capstone-project-public-subnet2


Outputs:

  ClusterArn:
    Description: The EKS Cluster Arn
    Value: !GetAtt EKSCluster.Arn
    Export:
      Name: !Sub "${AWS::StackName}-ClusterArn"
  NodeGroupArn:
    Description: The EKS Node ID
    Value: !GetAtt EKSNodeGroup.Arn
    Export:
      Name: !Sub "${AWS::StackName}-NodeArn"
